<resources>
    <string name="app_name">AndroidCourse</string>
    <string name="result">Result</string>
    <string name="divide">Divide</string>
    <string name="calculate">Calculate</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="enter_first_number">Enter first number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_home">Go Home</string>
    <string name="form">Form:</string>
    <string name="results_history">Results History</string>
    <string name="history">History</string>
    <string name="back_to_form">Back to form</string>
    <string name="clear">Clear</string>
</resources>